//
//  LoginView.swift
//  SCMP_Assignment
//
//  Created by James on 2/8/2025.
//
import SwiftUI

struct LoginView: View {
    @EnvironmentObject private var router: Router
    
    @StateObject private var viewModel: LoginViewModel
    
    init(router: Router) {
        _viewModel = StateObject(wrappedValue: LoginViewModel(router: router))
    }
    
    var body: some View {
        VStack(spacing: 20) {
            Text("Login")
                .font(.largeTitle)
                .fontWeight(.bold)
                .accessibilityIdentifier("loginTitle")
            
            TextField("Email", text: $viewModel.email)
                .textFieldStyle(.roundedBorder)
                .textInputAutocapitalization(.never)
                .disableAutocorrection(true)
                .padding(.horizontal)
                .accessibilityIdentifier("emailTextField")
            
            SecureField("Password", text: $viewModel.password)
                .textFieldStyle(.roundedBorder)
                .padding(.horizontal)
                .accessibilityIdentifier("passwordTextField")
            
            
            Button(action: {
                Task {
                    await viewModel.login()
                }
            }) {
                Text("Login")
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Color.blue)
                    .foregroundColor(.white)
                    .cornerRadius(10)
                    .padding(.horizontal)
            }
            .accessibilityIdentifier("loginButton")
            
        }
        .padding()
        .onAppear {
            viewModel.autoLogin()
        }
    }
}
